# Athena

./: package-lock.json
athena/: CMakeLists.txt
athena/gui/: main.py
athena/include/: engine.h  eval.h  movegen.h  search.h  thread.h
athena/src/: engine.cpp  eval.cpp  movegen.cpp  search.cpp
scripts/: perft_golden.sh  search_smoke.sh  smoke.sh
tests/: perft_golden.txt
